fix overflow

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   z-index: 10;
 }
 
-.wrap {
+.wrapper {
   overflow: hidden;
 }
 
