--- a/videos.css
+++ b/videos.css
@@ -19,7 +19,7 @@ body {
   --text-primary: #0071dc;
 }
 
-.wrapper {
+.wrap {
   overflow: hidden;
 }
 
